# DataFunnel

./: Dockerfile  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
data_funnel/: hello.py
test/: Dockerfile  pylint_check.sh  test_fetch_icao.py
tests/: Dockerfile  pylint_check.sh  run_tests.sh  test_hello.py
