[tool.poetry]
name = "data_funnel"
version = "0.1.0"
description = "Radar Data Decoder for GRLevelX"
authors = ["Samuel Roback"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arm-pyart = "^1.17.0"
pylint = "^3.2.6"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
